--- a/src/pages/index/components/InputBar/index.scss
+++ b/src/pages/index/components/InputBar/index.scss
@@ -1,6 +1,53 @@
+.view-image {
+  image {
+    width: 100%;
+  }
+}
 .InputBar {
   box-shadow: 0 0 12px 3px rgba(0, 0, 0, 0.05);
   background-color: #fff;
   margin: 0 auto;
   width: 96%;
+  &-top {
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding: 36px 24px;
+    padding-bottom: 0;
+    .view-image {
+      width: 106px;
+    }
+    .phoneInputBar {
+      flex: 1;
+      margin-left: 14px;
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #DBDBDB;
+      margin-top: -9px;
+      .areaNumber {
+        color: #999999;
+        font-size: 36px;
+        font-weight: bold;
+        line-height: 1;
+      }
+      .phoneInput {
+        flex: 1;
+      }
+    }
+  }
+  &-bottom {
+    display: flex;
+    align-items: center;
+    color: #25A8F5;
+    font-size: 24px;
+    padding: 36px 20px;
+    padding-top: 0;
+    .countryName {
+      width: 106px;
+      text-align: center;
+    }
+    .carrierName {
+      margin-left: 14px;
+    }
+  }
 }
