--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,12 @@
   line-height: 1;
   font-weight: bold;
 }
+.mySearchInput.at-input {
+  margin: 0;
+  padding: 0;
+  color: #969696;
+  font-size: 24px;
+}
 .myProductTab {
   .at-tabs__header {
     background-color: rgb(249, 249, 249);
@@ -15,5 +21,14 @@
     height: 7px;
     width: 60%;
     left: 20%;
+  }
+}
+.myCountryList {
+  .layout-header .layout-header__title {
+    text-align: center;
+    padding: 0;
+    color: #060606;
+    font-size: 30px;
+    font-weight: bold;
   }
 }
