--- a/src/pages/index/components/InputBar/index.scss
+++ b/src/pages/index/components/InputBar/index.scss
@@ -14,6 +14,8 @@
     position: relative;
     padding: 36px 24px;
     padding-bottom: 0;
+    z-index: 3;
+    background-color: #fff;
     .view-image {
       width: 106px;
     }
@@ -33,6 +35,24 @@
       .phoneInput {
         flex: 1;
       }
+    }
+  }
+  .phoneInputBg {
+    opacity: 0.8;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    transition: all .3s;
+    display: none;
+    width: 100%;
+    height: 100%;
+    zoom: 1;
+    background-color: #000;
+    z-index: 2;
+    &.active {
+      display: block;
     }
   }
   &-bottom {
