--- a/src/app.scss
+++ b/src/app.scss
@@ -12,7 +12,7 @@
   color: #969696;
   font-size: 24px;
 }
-.myProductTab {
+.at-tabs.myProductTab {
   .at-tabs__header {
     background-color: rgb(249, 249, 249);
     font-weight: bold;
@@ -23,7 +23,7 @@
     left: 20%;
   }
 }
-.myOrder, .myCountryList {
+.at-float-layout.myOrder, .at-float-layout.myCountryList, .at-float-layout.myCouponList {
   .layout-header .layout-header__title {
     text-align: center;
     padding: 0;
@@ -32,13 +32,22 @@
     font-weight: bold;
   }
 }
-.myCountryList {
+.at-float-layout.myCountryList {
   .layout-body .layout-body__content {
     max-height: none;
   }
 }
-.myOrder {
+.at-float-layout.myOrder {
   .at-float-layout__container .layout-body {
     padding: 0;
+  }
+}
+.at-float-layout.myCouponList {
+  .layout-body {
+    background-color: #F6F8F9;
+  }
+  .at-float-layout__container, .layout-body, .layout-body__content {
+    height: 100vh;
+    max-height: 100vh;
   }
 }
