--- a/src/pages/index/components/InputBar/components/CountryList/index.scss
+++ b/src/pages/index/components/InputBar/components/CountryList/index.scss
@@ -10,7 +10,7 @@
     align-items: center;
     padding: 8px 0;
     padding-left: 24vw;
-    border-bottom: 1px solid #F2F2F3;
+    border-bottom: 1PX solid #F2F2F3;
     color: #808080;
     &.active {
       background-color: #EBF7FF;
@@ -34,7 +34,7 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  border: 1px solid rgba(102,102,102,1);
+  border: 1PX solid rgba(102,102,102,1);
   padding: 19px 24px;
   margin-bottom: 20px;
   .searchInput {
