--- a/src/pages/index/components/InputBar/index.scss
+++ b/src/pages/index/components/InputBar/index.scss
@@ -24,7 +24,7 @@
       margin-left: 14px;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid #DBDBDB;
+      border-bottom: 1PX solid #DBDBDB;
       margin-top: -9px;
       .areaNumber {
         color: #999999;
