--- a/src/pages/index/components/ProductBar/components/ProductItem/index.scss
+++ b/src/pages/index/components/ProductBar/components/ProductItem/index.scss
@@ -1,7 +1,7 @@
 .ProductItem {
   width: 29.2vw;
   min-height: 110px;
-  border: 1px solid #0C7AD6;
+  border: 1PX solid #0C7AD6;
   border-radius: 10px;
   padding: 0 16px;
   color: #0C7AD6;
