--- a/src/app.scss
+++ b/src/app.scss
@@ -37,7 +37,7 @@
     max-height: none;
   }
 }
-.at-float-layout.myOrder {
+.at-float-layout.myOrder, .at-float-layout.myCouponList {
   .at-float-layout__container .layout-body {
     padding: 0;
   }
