--- a/src/pages/index/components/ProductBar/components/ProductItem/index.scss
+++ b/src/pages/index/components/ProductBar/components/ProductItem/index.scss
@@ -1,9 +1,9 @@
 .ProductItem {
-  width: 29.2vw;
+  width: 30vw;
   min-height: 110px;
   border: 1PX solid #0C7AD6;
   border-radius: 10px;
-  padding: 0 16px;
+  padding: 10px 0;
   color: #0C7AD6;
   margin: 0 1vw 28px;
   position: relative;
