--- a/src/app.scss
+++ b/src/app.scss
@@ -24,7 +24,7 @@
     left: 20%;
   }
 }
-.at-float-layout.myOrder, .at-float-layout.myCountryList, .at-float-layout.myCouponList {
+.at-float-layout.myOrder, .at-float-layout.myCountryList, .at-float-layout.myCouponList, .at-float-layout.myCarrierList {
   .layout-header .layout-header__title {
     text-align: center;
     padding: 0;
