--- a/src/pages/index/components/InputBar/index.scss
+++ b/src/pages/index/components/InputBar/index.scss
@@ -1,6 +1,7 @@
 .view-image {
   .image {
     width: 100%;
+    height: 40px;
   }
 }
 .InputBar {
@@ -65,6 +66,13 @@
     .countryName {
       width: 106px;
       text-align: center;
+      &.long {
+        width: 200px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: left;
+      }
     }
     .carrierName {
       margin-left: 14px;
