Add Product Request

--- a/src/pages/index/components/ProductBar/components/ProductTab/index.scss
+++ b/src/pages/index/components/ProductBar/components/ProductTab/index.scss
@@ -5,3 +5,52 @@
   padding: 38px 2vw;
   position: relative;
 }
+.flowProductDetail {
+  border-bottom: 1PX solid #f2f2f2;
+  border-top: 1PX solid #f2f2f2;
+  padding: 30px 3%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  &-info {
+    padding-right: .4em;
+    .title {
+      font-size: 36px;
+      color:#0E0E0E;
+      font-weight: bold;
+      margin-bottom: 20px;
+      .tips {
+        font-size: 24px;
+        color: #108EE8;
+        border: 1PX solid;
+        padding: 6px 12px;
+        font-weight: normal;
+        vertical-align: .2em;
+        border-radius: 6px;
+      }
+    }
+    .info {
+      color:#737373;
+      font-size: 24px;
+    }
+  }
+  &-buy {
+    .price {
+      color: #FF4E47;
+      font-weight: bold;
+      font-size: 30px;
+      text-align: center;
+    }
+    .button {
+      color: #FFFFFF;
+      font-size: 32px;
+      display: inline-block;
+      background-color: #108EE8;
+      border-radius: 10px;
+      padding: 10px 26px;
+      margin-top: 18px;
+      white-space: nowrap;
+    }
+  }
+}
