--- a/src/pages/index/components/InputBar/index.scss
+++ b/src/pages/index/components/InputBar/index.scss
@@ -1,7 +1,7 @@
 .view-image {
   .image {
     width: 100%;
-    height: 40px;
+    height: 106px;
   }
 }
 .InputBar {
@@ -67,7 +67,8 @@
       width: 106px;
       text-align: center;
       &.long {
-        width: 200px;
+        width: auto;
+        max-width: 200px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
