--- a/src/pages/index/components/ProductBar/components/ProductItem/index.scss
+++ b/src/pages/index/components/ProductBar/components/ProductItem/index.scss
@@ -12,6 +12,28 @@
   justify-content: center;
   flex-direction: column;
   box-sizing: border-box;
+  &.active {
+    background-color: #0C7AD6;
+    border: 1PX solid #0C7AD6;
+    color: #fff;
+  }
+  &.disabled {
+    border: 1PX solid #ddd;
+    color: #ddd;
+    pointer-events: none;
+  }
+  .hotTips {
+    position: absolute;
+    padding: .2em .7em;
+    border-radius: 1em;
+    border-bottom-left-radius: 0;
+    white-space: nowrap;
+    color: #fff;
+    font-size: 20px;
+    background-image: linear-gradient(90deg, rgba(255,120,46,1), rgba(255,78,71,1));
+    right: -.44em;
+    top: -1em;
+  }
   .name {
     font-weight: bold;
     font-size: 30px;
