--- a/src/pages/index/components/ProductBar/components/ProductTab/index.scss
+++ b/src/pages/index/components/ProductBar/components/ProductTab/index.scss
@@ -1,3 +1,18 @@
+.view-image {
+  .image {
+    width: 100%;
+    height: 60px;
+  }
+}
+.initTips {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: #fff;
+  color: #979797;
+  font-size: 30px;
+  padding-top: 3em;
+}
 .productList {
   display: flex;
   flex-wrap: wrap;
@@ -52,5 +67,22 @@
       margin-top: 18px;
       white-space: nowrap;
     }
+  }
+}
+.product-empty {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: #fff;
+  color: #979797;
+  font-size: 30px;
+  .view-image {
+    width: 50%;
+    margin: 0 auto 1em;;
+  }
+  .tips {
+    color: #808080;
+    font-size: 28px;
+    margin-bottom: .8em;
   }
 }
