Fix Modal Cancel

--- a/src/pages/index/components/ProductBar/components/Order/index.scss
+++ b/src/pages/index/components/ProductBar/components/Order/index.scss
@@ -44,6 +44,10 @@
     }
     &.disabled {
       color: #DFDFDF;
+      // .orderDetail-item-radio {
+      //   background-color: #ebedf0;
+      //   border-color: #c8c9cc;
+      // }
     }
     &-value {
       color: #141414;
